thanos-route.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: thanos-query-frontend
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: thanos-query-frontend
spec:
  hosts:
  - "*"
  gateways:
  - thanos-query-frontend
  http:
  - route:
    - destination:
        host: thanos-query-frontend
        port:
          number: 9090
